--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,14 @@
 # example netlify.toml
 [build]
-  command = "# no build command"
+  command = "gatsby build"
   functions = "functions"
-  publish = "."
+  publish = "public/"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app. 
   ## Not needed for static site generators.
   #[[redirects]]
   #  from = "/*"
-  #  to = "/public/index.html"
+  #  to = "/index.html"
   #  status = 200
   
   ## (optional) Settings for Netlify Dev
